Src/Black.Beard.Parsers.Antlr/ParsersConfiguration/AntlrConfigParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from AntlrConfigParser.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Bb.ParserConfigurations.Antlr {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
[System.CLSCompliant(false)]
public partial class AntlrConfigParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DOC_COMMENT=1, WS=2, INT=3, STRING_LITERAL=4, NO=5, GENERATE=6, CALCULATED=7, 
		WITH=8, DEFAULT=9, RULE=10, TEMPLATE=11, SELECT=12, WHEN=13, ONE=14, ONLY=15, 
		ANY=16, MANY=17, BLOCK=18, TERM=19, ALTERNATIVE=20, HAS=21, IS=22, NOT=23, 
		IN=24, LIST=25, KIND=26, INHERIT=27, OR=28, AND=29, OUTPUT=30, SEMI=31, 
		COLON=32, LPAREN=33, RPAREN=34, ASSIGN=35, OTHER_=36, CONSTANT_=37, IDENTIFIER_=38, 
		COMMENT_=39, BOOLEAN_=40, STRING_=41, DECIMAL_=42, INTEGER_=43, REAL_=44, 
		HEXA_=45, BINARY_=46, PATTERN_=47, OPERATOR_=48, PONCTUATION_=49, ID=50;
	public const int
		RULE_grammar_spec = 0, RULE_grammar_spec_list = 1, RULE_default = 2, RULE_template_selector = 3, 
		RULE_item_list = 4, RULE_grammar_declaration = 5, RULE_template_selector_expression = 6, 
		RULE_template_selector_expression_item = 7, RULE_template_selector_expression_item_has = 8, 
		RULE_template_selector_expression_item_is = 9, RULE_ruleConfig = 10, RULE_ruleTermConfig = 11, 
		RULE_termKindEnum = 12, RULE_calculated_rule_tune_inherit = 13, RULE_rule_tune_inherit = 14, 
		RULE_calculated_template_setting = 15, RULE_template_setting = 16, RULE_optional_template_setting = 17, 
		RULE_additional_settings = 18, RULE_value_item = 19, RULE_identifier = 20;
	public static readonly string[] ruleNames = {
		"grammar_spec", "grammar_spec_list", "default", "template_selector", "item_list", 
		"grammar_declaration", "template_selector_expression", "template_selector_expression_item", 
		"template_selector_expression_item_has", "template_selector_expression_item_is", 
		"ruleConfig", "ruleTermConfig", "termKindEnum", "calculated_rule_tune_inherit", 
		"rule_tune_inherit", "calculated_template_setting", "template_setting", 
		"optional_template_setting", "additional_settings", "value_item", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'NO'", "'GENERATE'", "'CALCULATED'", "'WITH'", 
		"'DEFAULT'", "'RULE'", "'TEMPLATE'", "'SELECT'", "'WHEN'", "'ONE'", "'ONLY'", 
		"'ANY'", "'MANY'", "'BLOCK'", "'TERM'", "'ALTERNATIVE'", "'HAS'", "'IS'", 
		"'NOT'", "'IN'", "'LIST'", "'KIND'", "'INHERIT'", "'|'", "'&'", "'OUTPUT'", 
		null, null, null, null, null, "'#OTHER'", "'#CONSTANT'", "'#IDENTIFIER'", 
		"'#COMMENT'", "'#BOOLEAN'", "'#STRING'", "'#DECIMAL'", "'#INTEGER'", "'#REAL'", 
		"'#HEXA'", "'#BINARY'", "'#PATTERN'", "'#OPERATOR'", "'#PONCTUATION'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DOC_COMMENT", "WS", "INT", "STRING_LITERAL", "NO", "GENERATE", 
		"CALCULATED", "WITH", "DEFAULT", "RULE", "TEMPLATE", "SELECT", "WHEN", 
		"ONE", "ONLY", "ANY", "MANY", "BLOCK", "TERM", "ALTERNATIVE", "HAS", "IS", 
		"NOT", "IN", "LIST", "KIND", "INHERIT", "OR", "AND", "OUTPUT", "SEMI", 
		"COLON", "LPAREN", "RPAREN", "ASSIGN", "OTHER_", "CONSTANT_", "IDENTIFIER_", 
		"COMMENT_", "BOOLEAN_", "STRING_", "DECIMAL_", "INTEGER_", "REAL_", "HEXA_", 
		"BINARY_", "PATTERN_", "OPERATOR_", "PONCTUATION_", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AntlrConfigParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static AntlrConfigParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AntlrConfigParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AntlrConfigParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Grammar_specContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(AntlrConfigParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Grammar_spec_listContext[] grammar_spec_list() {
			return GetRuleContexts<Grammar_spec_listContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Grammar_spec_listContext grammar_spec_list(int i) {
			return GetRuleContext<Grammar_spec_listContext>(i);
		}
		public Grammar_specContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammar_spec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGrammar_spec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Grammar_specContext grammar_spec() {
		Grammar_specContext _localctx = new Grammar_specContext(Context, State);
		EnterRule(_localctx, 0, RULE_grammar_spec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 34084352L) != 0) {
				{
				{
				State = 42;
				grammar_spec_list();
				}
				}
				State = 47;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 48;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Grammar_spec_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DefaultContext @default() {
			return GetRuleContext<DefaultContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Template_selectorContext template_selector() {
			return GetRuleContext<Template_selectorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Item_listContext item_list() {
			return GetRuleContext<Item_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Grammar_declarationContext grammar_declaration() {
			return GetRuleContext<Grammar_declarationContext>(0);
		}
		public Grammar_spec_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammar_spec_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGrammar_spec_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Grammar_spec_listContext grammar_spec_list() {
		Grammar_spec_listContext _localctx = new Grammar_spec_listContext(Context, State);
		EnterRule(_localctx, 2, RULE_grammar_spec_list);
		try {
			State = 54;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DEFAULT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 50;
				@default();
				}
				break;
			case SELECT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 51;
				template_selector();
				}
				break;
			case LIST:
				EnterOuterAlt(_localctx, 3);
				{
				State = 52;
				item_list();
				}
				break;
			case RULE:
			case TERM:
				EnterOuterAlt(_localctx, 4);
				{
				State = 53;
				grammar_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefaultContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFAULT() { return GetToken(AntlrConfigParser.DEFAULT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Template_settingContext template_setting() {
			return GetRuleContext<Template_settingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(AntlrConfigParser.SEMI, 0); }
		public DefaultContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_default; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefault(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefaultContext @default() {
		DefaultContext _localctx = new DefaultContext(Context, State);
		EnterRule(_localctx, 4, RULE_default);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			Match(DEFAULT);
			State = 57;
			template_setting();
			State = 58;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Template_selectorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SELECT() { return GetToken(AntlrConfigParser.SELECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Template_settingContext template_setting() {
			return GetRuleContext<Template_settingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHEN() { return GetToken(AntlrConfigParser.WHEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Template_selector_expressionContext template_selector_expression() {
			return GetRuleContext<Template_selector_expressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(AntlrConfigParser.SEMI, 0); }
		public Template_selectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_template_selector; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTemplate_selector(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Template_selectorContext template_selector() {
		Template_selectorContext _localctx = new Template_selectorContext(Context, State);
		EnterRule(_localctx, 6, RULE_template_selector);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(SELECT);
			State = 61;
			template_setting();
			State = 62;
			Match(WHEN);
			State = 63;
			template_selector_expression();
			State = 64;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Item_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LIST() { return GetToken(AntlrConfigParser.LIST, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(AntlrConfigParser.SEMI, 0); }
		public Item_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_item_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItem_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Item_listContext item_list() {
		Item_listContext _localctx = new Item_listContext(Context, State);
		EnterRule(_localctx, 8, RULE_item_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			Match(LIST);
			State = 67;
			identifier();
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 68;
				identifier();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==STRING_LITERAL || _la==ID );
			State = 73;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Grammar_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RULE() { return GetToken(AntlrConfigParser.RULE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RuleConfigContext ruleConfig() {
			return GetRuleContext<RuleConfigContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(AntlrConfigParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TERM() { return GetToken(AntlrConfigParser.TERM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RuleTermConfigContext ruleTermConfig() {
			return GetRuleContext<RuleTermConfigContext>(0);
		}
		public Grammar_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammar_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGrammar_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Grammar_declarationContext grammar_declaration() {
		Grammar_declarationContext _localctx = new Grammar_declarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_grammar_declaration);
		try {
			State = 85;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case RULE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75;
				Match(RULE);
				State = 76;
				identifier();
				State = 77;
				ruleConfig();
				State = 78;
				Match(SEMI);
				}
				break;
			case TERM:
				EnterOuterAlt(_localctx, 2);
				{
				State = 80;
				Match(TERM);
				State = 81;
				identifier();
				State = 82;
				ruleTermConfig();
				State = 83;
				Match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Template_selector_expressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Template_selector_expression_itemContext template_selector_expression_item() {
			return GetRuleContext<Template_selector_expression_itemContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Template_selector_expressionContext template_selector_expression() {
			return GetRuleContext<Template_selector_expressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR() { return GetToken(AntlrConfigParser.OR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND() { return GetToken(AntlrConfigParser.AND, 0); }
		public Template_selector_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_template_selector_expression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTemplate_selector_expression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Template_selector_expressionContext template_selector_expression() {
		Template_selector_expressionContext _localctx = new Template_selector_expressionContext(Context, State);
		EnterRule(_localctx, 12, RULE_template_selector_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			template_selector_expression_item();
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==OR || _la==AND) {
				{
				State = 88;
				_la = TokenStream.LA(1);
				if ( !(_la==OR || _la==AND) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 89;
				template_selector_expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Template_selector_expression_itemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Template_selector_expression_item_hasContext template_selector_expression_item_has() {
			return GetRuleContext<Template_selector_expression_item_hasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Template_selector_expression_item_isContext template_selector_expression_item_is() {
			return GetRuleContext<Template_selector_expression_item_isContext>(0);
		}
		public Template_selector_expression_itemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_template_selector_expression_item; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTemplate_selector_expression_item(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Template_selector_expression_itemContext template_selector_expression_item() {
		Template_selector_expression_itemContext _localctx = new Template_selector_expression_itemContext(Context, State);
		EnterRule(_localctx, 14, RULE_template_selector_expression_item);
		try {
			State = 94;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				template_selector_expression_item_has();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				template_selector_expression_item_is();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Template_selector_expression_item_hasContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RULE() { return GetTokens(AntlrConfigParser.RULE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RULE(int i) {
			return GetToken(AntlrConfigParser.RULE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HAS() { return GetToken(AntlrConfigParser.HAS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ONE() { return GetToken(AntlrConfigParser.ONE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ONLY() { return GetToken(AntlrConfigParser.ONLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ANY() { return GetToken(AntlrConfigParser.ANY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NO() { return GetToken(AntlrConfigParser.NO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MANY() { return GetToken(AntlrConfigParser.MANY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK() { return GetToken(AntlrConfigParser.BLOCK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TERM() { return GetToken(AntlrConfigParser.TERM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ALTERNATIVE() { return GetToken(AntlrConfigParser.ALTERNATIVE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OUTPUT() { return GetToken(AntlrConfigParser.OUTPUT, 0); }
		public Template_selector_expression_item_hasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_template_selector_expression_item_has; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlrConfigParserVisitor<TResult> typedVisitor = visitor as IAntlrConfigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTemplate_selector_expression_item_has(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Template_selector_expression_item_hasContext template_selector_expression_item_has() {
		Template_selector_expression_item_hasContext _localctx = new Template_selector_expression_item_hasContext(Context, State);
		EnterRule(_localctx, 16, RULE_template_selector_expression_item_has);
		int _la;
		try {
			State = 107;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96;
				Match(RULE);
				State = 97;
				Match(HAS);
				State = 98;
				_la = TokenStream.LA(1);
				if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 245792L) != 0) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 99;
				_la = TokenStream.LA(1);
				if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 1836032L) != 0) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 100;
				Match(RULE);
				State = 101;
				Match(HAS);
				State = 102;
				Match(ONE);
				State = 103;
				Match(OUTPUT);
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 1836032L) != 0) {
					{
					State = 104;
					_la = TokenStream.LA(1);
					if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 1836032L) != 0) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
